--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 
   <link rel="stylesheet" href="style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+    <main>
+      <div id="cabecalho">
+        <img src="./images/logo.svg" alt="logomarca">
+        <button>Try it free</button>
+      </div>
 
+
+    </main>
   Try It Free
 
   Build The Community Your Fans Will Love
