--- a/index.html
+++ b/index.html
@@ -17,50 +17,76 @@
   </style>
 </head>
 <body>
+  <header>
+    Try It Free
+  
+    Build The Community Your Fans Will Love
+  
+    Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+    Create connections with your users as you engage in genuine discussion. 
+  
+    Get Started For Free
 
-  Try It Free
+  </header>
 
-  Build The Community Your Fans Will Love
+  <main>
+  
+  <div class="container">
+    Grow Together
+  
+    Generate meaningful discussions with your audience and build a strong, loyal community. 
+    Think of the insightful conversations you miss out on with a feedback form. 
+  </div>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+  <div class="container">
+    Flowing Conversations
+  
+    You wouldn't paginate a conversation in real life, so why do it online? Our threads 
+    have just-in-time loading for a more natural flow.
+  </div>
 
-  Get Started For Free
+  <div class="container">
+    <div>
+      Your Users
+    
+      It takes no time at all to integrate Huddle with your app's authentication solution. 
+      This means, once signed in to your app, your users can start chatting immediately.
+    </div>
+    <!-- <img src="images/illustration-your-users.svg" alt=""> -->
+  </div>  
+  
+  <div id="modal">
+    Ready To Build Your Community?
+  
+    Get Started For Free    
 
-  Grow Together
+  </div>  
+  
+  
+    
+  
+  </main>
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
+  <section id="footer">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+    incididunt ut labore et dolore magna aliqua
+  
+    +1-543-123-4567
+    example@huddle.com
+  
+    About Us
+    What We Do
+    FAQ
+  
+    Career
+    Blog
+    Contact Us
 
-  Flowing Conversations
+    &copy; Copyright 2018 Huddle. All rights reserved.
 
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
+  </section>
 
-  Your Users
 
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-  incididunt ut labore et dolore magna aliqua
-
-  +1-543-123-4567
-  example@huddle.com
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  &copy; Copyright 2018 Huddle. All rights reserved.
 
   <footer>
     <p class="attribution">
