--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -17,7 +17,11 @@
   </style>
 </head>
 <body>
-
+<main>
+  <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente recusandae magni ullam aperiam a illum. Nobis maxime dolorem repudiandae alias. Laborum animi doloremque quo eum! Iste unde tenetur vero quam!</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur explicabo culpa nostrum quis voluptatibus veritatis voluptatum, excepturi odit incidunt sit corporis vero at corrupti asperiores animi labore quidem eum quasi?</p>
+  <img src="images/illustration-grow-together.svg" alt="conversations">
+</main>
   Try It Free
 
   Build The Community Your Fans Will Love
