mudanca na main parte flowing conversations

--- a/index.html
+++ b/index.html
@@ -26,21 +26,24 @@
   Create connections with your users as you engage in genuine discussion. 
 
   Get Started For Free
-
+<main>
   Grow Together
 
   Generate meaningful discussions with your audience and build a strong, loyal community. 
   Think of the insightful conversations you miss out on with a feedback form. 
-
+<div class="container">
+  <img src="./images/illustration-flowing-conversation.svg" alt="">
+  
   Flowing Conversations
 
   You wouldn't paginate a conversation in real life, so why do it online? Our threads 
   have just-in-time loading for a more natural flow.
-
+</div>
   Your Users
 
   It takes no time at all to integrate Huddle with your app's authentication solution. 
   This means, once signed in to your app, your users can start chatting immediately.
+</main>
 
   Ready To Build Your Community?
 
