--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -18,8 +18,8 @@
 </head>
 <body>
 <main>
-  <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente recusandae magni ullam aperiam a illum. Nobis maxime dolorem repudiandae alias. Laborum animi doloremque quo eum! Iste unde tenetur vero quam!</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur explicabo culpa nostrum quis voluptatibus veritatis voluptatum, excepturi odit incidunt sit corporis vero at corrupti asperiores animi labore quidem eum quasi?</p>
+  <h1>Lorem ipsum dolor sit amet</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur explicabo culpa nostrum quis voluptatibus veritatis voluptatum, excepturi odit incidunt sit corporis vero at corrupti asperiores animi labore quidem eum quasi? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima quod laudantium qui hic corrupti nam rerum placeat a, fugit praesentium rem sapiente temporibus ipsam odio non ipsa perferendis, dolorem cumque!</p>
   <img src="images/illustration-grow-together.svg" alt="conversations">
 </main>
   Try It Free
