--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <div id="cabecalho">
       <img src="./images/logo.svg" alt="logomarca">
-      <button><a href="./index.html"></a>Try it free</button>
+      <a href="./index.html"><button>Try it free</button></a>
     </div>
 
 
