--- a/index.html
+++ b/index.html
@@ -27,29 +27,30 @@
     </div>
 
     <div id="mockup">
-      <img src="./images/illustration-mockups.svg" alt="">
+      <img src="./images/illustration-mockups.svg" alt="" id="imagemM">
     </div>
 
-  Build The Community Your Fans Will Love
+    Build The Community Your Fans Will Love
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+    Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+    Create connections with your users as you engage in genuine discussion. 
 
-  Get Started For Free
-  <header>
+    Get Started For Free
+  <header>  
 
-  Grow Together
+    Grow Together
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-<div class="container">
-  <img src="./images/illustration-flowing-conversation.svg" alt="">
-  
-  Flowing Conversations
+    Generate meaningful discussions with your audience and build a strong, loyal community. 
+    Think of the insightful conversations you miss out on with a feedback form. 
+    
+  <div class="container">
+    <img src="./images/illustration-flowing-conversation.svg" alt="">
+    
+    Flowing Conversations
 
-      You wouldn't paginate a conversation in real life, so why do it online? Our threads
-      have just-in-time loading for a more natural flow.
-    </div>
+        You wouldn't paginate a conversation in real life, so why do it online? Our threads
+        have just-in-time loading for a more natural flow.
+      </div>
 
     <div class="container">
       <div>
