--- a/index.html
+++ b/index.html
@@ -37,15 +37,16 @@
   </header>
   <main>
 
+    <div class="container" id="container1">
+      <h1>Grow Together</h1>
+      <img src="images/illustration-grow-together.svg" alt="conversation">
+      <p>Generate meaningful discussions with your audience and build a strong, loyal community.
+        Think of the insightful conversations you miss out on with a feedback form.</p>
+    </div>
     <div class="container">
-      Grow Together
+      <img src="./images/illustration-flowing-conversation.svg" alt="">
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-<div class="container">
-  <img src="./images/illustration-flowing-conversation.svg" alt="">
-  
-  Flowing Conversations
+      Flowing Conversations
 
       You wouldn't paginate a conversation in real life, so why do it online? Our threads
       have just-in-time loading for a more natural flow.
@@ -89,7 +90,7 @@
 
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Equipe GT 13</a>.
     </p>
   </footer>
