mudanças no flowing conversations

--- a/index.html
+++ b/index.html
@@ -42,14 +42,17 @@
 
   Generate meaningful discussions with your audience and build a strong, loyal community. 
   Think of the insightful conversations you miss out on with a feedback form. 
-<div class="container">
-  <img src="./images/illustration-flowing-conversation.svg" alt="">
-  
-  Flowing Conversations
 
-      You wouldn't paginate a conversation in real life, so why do it online? Our threads
-      have just-in-time loading for a more natural flow.
+<div class="container" id="container2">
+  <img src="./images/illustration-flowing-conversation.svg" alt="">
+
+  <div class="conversation">
+  <h1>Flowing Conversations</h1> 
+
+     <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads
+      have just-in-time loading for a more natural flow.</p> 
     </div>
+  </div>
 
     <div class="container">
       <div>
