--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     Get Started For Free
   <header>  
-
+    <main>
     Grow Together
 
     Generate meaningful discussions with your audience and build a strong, loyal community. 
