--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -17,15 +17,21 @@
   </style>
 </head>
 <body>
+<header class="hea">
+<h1>Build The Community </h1>
+<h1>Your Fans Will Love</h1>
 
-  Try It Free
-
-  Build The Community Your Fans Will Love
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
+<p>Huddle re-imagines the way we build
+  communities.You have <br> a voice, but so does 
+   your audience.Create connections with <br>  your
+   users as you engage in genuine discussion. </p>
+   
+<button class="but">
   Get Started For Free
+</button>
+ 
+</header>
+ 
 
   Grow Together
 
