--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <header>
     <div id="cabecalho">
-      <img src="./images/logo.svg" alt="logomarca">
+      <img src="./images/logo.svg" alt="logomarca" id="logo">
       <a href="./index.html"><button>Try it free</button></a>
     </div>
 
