--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header>
     <div id="cabecalho">
       <img src="./images/logo.svg" alt="logomarca" id="logo">
-      <a href="./index.html"><button>Try it free</button></a>
+      <a href="./index.html"><button id="btnfree">Try it free</button></a>
     </div>
 
     <div id="mockup">
