finalização do container 3 e o modal

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   Generate meaningful discussions with your audience and build a strong, loyal community. 
   Think of the insightful conversations you miss out on with a feedback form. 
 <div class="container">
-  <img src="./images/illustration-flowing-conversation.svg" alt="">
+  <!-- <img src="./images/illustration-flowing-conversation.svg" alt=""> -->
   
   Flowing Conversations
 
@@ -51,20 +51,28 @@
       have just-in-time loading for a more natural flow.
     </div>
 
-    <div class="container">
-      <div>
-        Your Users
+    <div class="container" id="container3">
+      <div class="content">
+        <h2>
+          Your Users
+        </h2>
 
-        It takes no time at all to integrate Huddle with your app's authentication solution.
-        This means, once signed in to your app, your users can start chatting immediately.
+        <p>
+          It takes no time at all to integrate Huddle with your app's authentication solution.
+          This means, once signed in to your app, your users can start chatting immediately.
+        </p>
       </div>
-      <!-- <img src="images/illustration-your-users.svg" alt=""> -->
+      <img src="images/illustration-your-users.svg" alt="">
     </div>
 
     <div id="modal">
-      Ready To Build Your Community?
+      <h3>
+        Ready To Build Your Community?
+      </h3>
 
-      Get Started For Free
+      <button>
+        Get Started For Free
+      </button>
 
     </div>
 
