--- a/index.html
+++ b/index.html
@@ -38,13 +38,15 @@
   <main>
 
     <div class="container" id="container1">
-      <h1>Grow Together</h1>
+      <div class="conteudo">
+          <h1>Grow Together</h1>
+          <p>Generate meaningful discussions with your audience and build a strong, loyal community. <br>
+          Think of the insightful conversations you miss out on with a feedback form.</p>
+      </div>
       <img src="images/illustration-grow-together.svg" alt="conversation">
-      <p>Generate meaningful discussions with your audience and build a strong, loyal community.
-        Think of the insightful conversations you miss out on with a feedback form.</p>
     </div>
     <div class="container">
-      <img src="./images/illustration-flowing-conversation.svg" alt="">
+      <!-- <img src="./images/illustration-flowing-conversation.svg" alt=""> -->
 
       Flowing Conversations
 
