--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header>
     <div id="cabecalho">
       <img src="./images/logo.svg" alt="logomarca" id="logo">
-      <a href="./index.html"><button>Try it free</button></a>
+      <a href="./index.html"><button id="btn-1">Try it free</button></a>
     </div>
 
     <div id="mockup">
@@ -80,7 +80,7 @@
         Ready To Build Your Community?
       </h3>
 
-      <button>
+      <button id="btn-2">
         Get Started For Free
       </button>
 
