--- a/index.html
+++ b/index.html
@@ -79,9 +79,6 @@
     </div>
 
   </main>
-
-
-  <!-- Option 1: Bootstrap Bundle with Popper -->
  
 
   <footer class="text-white text-center text-lg-start" id="rodape">
@@ -89,7 +86,7 @@
     <!-- Grid container -->
     <div class="container p-4">
       <!--Grid row-->
-      <div class="row">
+      <div class="row" id="linhafooter">
         <!--Grid column-->
         <div class="col-lg-5 col-md-3 mb-1 mb-md-0">
 
@@ -117,13 +114,13 @@
         <div class="col-lg-2 col-md-4 mb-4 mb-md-0">
           <ul class="list-unstyled mb-0">
             <li class="linha3">
-              <p href="" class="text-white">About Us</p>
+              <p href="#!" class="text-white">About Us</p>
             </li>
-            <li class="">
-              <p href="" class="text-white">What We Do</p>
+            <li>
+              <p href="#!" class="text-white">What We Do</p>
             </li>
-            <li class="">
-              <p href="" class="text-white">FAQ</p>
+            <li>
+              <p href="#!" class="text-white">FAQ</p>
             </li>
           </ul>
         </div>
@@ -136,10 +133,10 @@
             <li class="linha3">
               <p href="#!" class="text-white">Career</p>
             </li>
-            <li class="">
+            <li>
               <p href="#!" class="text-white">Blog</p>
             </li>
-            <li class="">
+            <li>
               <p href="#!" class="text-white">Contact Us</p>
             </li>
           </ul>
@@ -172,9 +169,9 @@
       <h7>&copy; Copyright 2018 Huddle. All rights reserved.</h7>
     </div>
 
-    <p class="attribution">
+    <p class="text-center">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Equipe GT 13</a>.
+      Coded by <a href="#">Equipe GT 10</a>.
     </p>
   </footer>
 
