atualizando main local

--- a/index.html
+++ b/index.html
@@ -71,12 +71,7 @@
       <!-- <img src="images/illustration-your-users.svg" alt=""> -->
     </div>
 
-    <div id="modal">
-      Ready To Build Your Community?
-
-      Get Started For Free
-
-    </div>
+    
 
   </main>
 
@@ -86,10 +81,18 @@
 
   <footer class="text-white text-center text-lg-start" id="rodape">
 
+    <div id="modal">
+      <h3>Ready To Build Your Community?</h3> 
+ 
+       
+       <a href="./index.html"><button>Get Started For Free</button></a>
+ 
+     </div>
+
     <!-- Grid container -->
     <div class="container p-4">
       <!--Grid row-->
-      <div class="row">
+      <div class="row" id="linhafooter">
         <!--Grid column-->
         <div class="col-lg-5 col-md-3 mb-1 mb-md-0">
 
