--- a/index.html
+++ b/index.html
@@ -43,10 +43,23 @@
 
   <main>
 
-    Grow Together
+    <div class="container" id="container1">
+      <div class="content">
+        <h2>
+          Grow Together 
+        </h2>
 
-    Generate meaningful discussions with your audience and build a strong, loyal community. 
-    Think of the insightful conversations you miss out on with a feedback form. 
+        <p>
+          Generate meaningful discussions with your audience and build a strong, loyal community. 
+    Think of the insightful conversations you miss out on with a feedback form.
+        </p>
+      </div>
+      <img src="images/illustration-grow-together.svg" alt="">
+    </div>
+
+   
+
+     
 
     <div class="container" id="container2">
     
