mudança no container2

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   Think of the insightful conversations you miss out on with a feedback form. 
 
 <div class="container" id="container2">
-  <img src="./images/illustration-flowing-conversation.svg" alt="">
+  <img id="img2" src="./images/illustration-flowing-conversation.svg" alt="">
 
   <div class="conversation">
   <h3>Flowing Conversations</h3> 
