--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     </div>
     <section class="hea">
       <!-- inicio jair -->
-      <h1>Build The Community </h1>
-      <h1>Your Fans Will Love</h1>
+      <h2>Build The Community </h2>
+      <h3>Your Fans Will Love</h3>
 
-      <p>Huddle re-imagines the way we build
+      <p id="textoJ">Huddle re-imagines the way we build
         communities.You have <br> a voice, but so does
         your audience.Create connections with <br> your
         users as you engage in genuine discussion. </p>
