--- a/index.html
+++ b/index.html
@@ -31,23 +31,27 @@
       <a href="./index.html"><button id="btn-1">Try it free</button></a>
     </div>
 
-    <div id="mockup">
-      <img src="./images/illustration-mockups.svg" alt="" id="imagemM">
-    </div>
-    <section class="hea">
-      <!-- inicio jair -->
-      <h2>Build The Community </h2>
-      <h3>Your Fans Will Love</h3>
+    <section id="testeOne">
 
-      <p id="textoJ">Huddle re-imagines the way we build
-        communities.You have <br> a voice, but so does
-        your audience.Create connections with <br> your
-        users as you engage in genuine discussion. </p>
+      <div class="hea">
+        <!-- inicio jair -->
+        <h2>Build The Community <br>  Your Fans Will Love</h2>
 
-      <button class="but">
-        Get Started For Free
-      </button>
-      <!-- fim jair -->
+        <p id="textoJ">Huddle re-imagines the way we build
+          communities.You have <br> a voice, but so does
+          your audience.Create connections with <br> your
+          users as you engage in genuine discussion. </p>
+
+        <button class="but">
+          Get Started For Free
+        </button>
+        <!-- fim jair -->
+      </div>
+
+      <div id="mockup">
+        <img src="./images/illustration-mockups.svg" alt="" id="imagemM">
+      </div>
+
     </section>
 
 
