mudanças no container2

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="container" id="container2">
 
-      <img id="img2" src="./images/illustration-flowing-conversation.svg" alt="" id="imagem1">
+      <img id="img2" src="./images/illustration-flowing-conversation.svg" alt="">
 
       <div class="conversation">
         <h3>Flowing Conversations</h3>
