adicionando cor no background

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="hea">
         <!-- inicio jair -->
-        <h2>Build The Community <br>  Your Fans Will Love</h2>
+        <h2 id="fonteH">Build The Community <br>  Your Fans Will Love</h2>
 
         <p id="textoJ">Huddle re-imagines the way we build
           communities.You have <br> a voice, but so does
