--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header>
     <div id="cabecalho">
       <img src="./images/logo.svg" alt="logomarca" id="logo">
-      <a href="./index.html"><button id="btn-1" id="btnfree">Try it free</button></a>
+      <a href="./index.html"><button id="btn-1" >Try it free</button></a>
     </div>
 
     <section id="testeOne">
